<resources>
    <string name="app_name" translatable="false">ArpAndroid</string>

    <string name="header">This app will set an static ARP entry on the gateway MAC address each time you connect to a wifi network, to protect your phone from arp spoofing techniques used in MiTM attacks. This app needs root access to add the static arp entry.</string>
    <string name="CheckBox_ON">You granted Root Access!</string>
    <string name="CheckBox_OFF">You don\'t have Root Access! You need to be rooted in order to use this app!</string>
    <string name="Root_Granted">Grand Root permission</string>
    <string name="WifiIcon" translatable="false">WifiIcon</string>
    <string name="WifiStaticArp_OFF">Wifi Static Arp - Protection Off</string>
    <string name="WifiStaticArp_ON">Wifi Static Arp - Protection On</string>

    <string name="Failed">Could not set static ARP on the gateway mac</string>
    <string name="Failed_Root">Could not set static ARP on the gateway mac, no root access given.</string>
    <string name="ArpSpoofing">Start ArpSpoof</string>

    <string name="rootError">An error was encountered while attempting to run as root.  Arpspoof requires root.</string>
    <string name="successfulInstall">Executable was successfully installed</string>
    <string name="copyExeTitle">Copy executable for use with terminal.</string>
    <string name="howTo">\nEnter the IP address of the host you wish to impersonate and press "Begin Spoofing".  If you do not enter an IP address then Arpspoof will attempt to spoof the network\'s gateway.</string>
    <string name="tcpdumpFilter" translatable="false"> not \'(src host localhost or dst host localhost or arp)\'</string>
    <string name="BeginSpoof">Begin Spoofing</string>
    <string name="Target">Target\'s IP</string>
    <string name="TargetLabel">Target IP(optional):</string>
    <string name="FilterExp">Tcpdump filter expression(required):</string>
    <string name="IptoSpoof">Enter the IP address you want to spoof here</string>
    <string name="title_activity_app_intro" translatable="false">Arp Android</string>

    <string name="welcome">Welcome!</string>
    <string name="Protect">Protect</string>
    <string name="FirstSlide">This app is made to help you protect from ARP attacks and also start ones!</string>
    <string name="SecondSlide">This app made by Nikolaos Bousios A.K.A. Rambou and made as a university project.</string>
</resources>
